# global_resource_management

./: 1.gn  README.md  README_zh.md  bundle.json  ohos.build  resmgr.gni
ani/: BUILD.gn  arktsconfig.json
ani/arkts/: BUILD.gn  arktsconfig.json  resmgr_ani.sts  resource.sts
ani/include/: resmgr_ani.h
ani/native/: resmgr_ani.cpp  resmgr_enum.cpp
dfx/api_metrics/: api_metrics_reporter.cpp  api_metrics_reporter.h
dfx/hisysevent_adapter/: hisysevent_adapter.cpp  hisysevent_adapter.h
frameworks/resmgr/: BUILD.gn  librawfile.versionscript  libresmgr.versionscript
frameworks/resmgr/include/: hap_manager.h  hap_parser.h  hap_parser_v1.h  hap_parser_v2.h  hap_resource.h  hap_resource_manager.h  hap_resource_v1.h  hap_resource_v2.h  hilog_wrapper.h  locale_matcher.h  lock.h  mmap_file.h  res_config_impl.h  res_desc.h  res_locale.h  resource_manager_ext_mgr.h  resource_manager_impl.h  resource_manager_impl_ext.h  system_resource_manager.h  theme_pack_config.h  theme_pack_manager.h  theme_pack_resource.h
frameworks/resmgr/include/utils/: psue_manager.h  string_utils.h  utils.h
frameworks/resmgr/src/: hap_manager.cpp  hap_parser.cpp  hap_parser_v1.cpp  hap_parser_v2.cpp  hap_resource.cpp  hap_resource_manager.cpp  hap_resource_v1.cpp  hap_resource_v2.cpp  locale_matcher.cpp  mmap_file.cpp  native_resource_manager.cpp  raw_file_manager.cpp  res_config_impl.cpp  res_desc.cpp  res_locale.cpp  resmgr.js  resource_manager.cpp  resource_manager_ext_mgr.cpp  resource_manager_impl.cpp  resource_manager_impl_ext.cpp  system_resource_manager.cpp  theme_pack_config.cpp  theme_pack_manager.cpp  theme_pack_resource.cpp
frameworks/resmgr/src/utils/: hap_parser.cpp  locale_data.cpp  psue_manager  psue_manager.cpp  string_utils.cpp  utils.cpp
frameworks/resmgr/test/: BUILD.gn
frameworks/resmgr/test/unittest/common/: hap_manager_test.cpp  hap_manager_test.h  hap_parser_test.cpp  hap_parser_test.h  hap_resource_test.cpp  locale_info_test.cpp  res_config_impl_test.cpp  res_config_impl_test.h  res_config_test.cpp  res_desc_test.cpp  resource_manager_new_module_performance_test.cpp  resource_manager_performance_test.cpp  resource_manager_performance_test.h  resource_manager_test.cpp  resource_manager_test.h  resource_manager_test_common.cpp  resource_manager_test_common.h  resource_manager_test_hap.cpp  resource_manager_test_hap.h  resource_manager_test_media.cpp  resource_manager_test_media.h  resource_manager_test_string.cpp  resource_manager_test_string.h  resource_manager_v1_v2_test.cpp  string_utils_test.cpp  string_utils_test.h  system_resource_manager_test.cpp  test_common.cpp  test_common.h  theme_config_test.cpp  theme_config_test.h  theme_manager_test.cpp  theme_manager_test.h  theme_resource_test.cpp
frameworks/resmgr/test/unittest/utils/: psue_manaer_test.cpp  utils_test.cpp
interfaces/cj/: BUILD.gn
interfaces/cj/src/: resource_manager_ffi.cpp  resource_manager_ffi.h  resource_manager_impl.cpp  resource_manager_impl.h  resource_manager_interface.h  resource_manager_log.h  resource_manager_mock.cpp  utils.cpp  utils.h
interfaces/ets/ani/: BUILD.gn
interfaces/ets/ani/resourceManager/: BUILD.gn
interfaces/ets/ani/resourceManager/ets/: @ohos.resourceManager.ets
interfaces/ets/ani/resourceManager/ets/global/: rawFileDescriptor.ets  rawFileDescriptorInner.ets  resource.ets  resourceInner.ets
interfaces/ets/ani/resourceManager/include/: ani_signature.h  ani_utils.h  resmgr_ani.h  resourceManager.h  resourceManager_enum.h  resource_manager_ani_utils.h  resource_manager_data_context.h
interfaces/ets/ani/resourceManager/src/: ani_utils.cpp  resmgr_ani.cpp  resourceManager.cpp  resourceManager_enum.cpp  resource_manager_ani_utils.cpp
interfaces/inner_api/include/: res_common.h  res_config.h  resource_manager.h  rstate.h
interfaces/innerkits/include/: res_common.h  res_config.h  resource_manager.h
interfaces/js/innerkits/core/: BUILD.gn
interfaces/js/innerkits/core/include/: resource_manager_addon.h  resource_manager_data_context.h  resource_manager_napi_base.h  resource_manager_napi_context.h  resource_manager_napi_sync_impl.h  resource_manager_napi_utils.h  resource_table_loader.h
interfaces/js/innerkits/core/src/: resource_manager_addon.cpp  resource_manager_napi_async_impl.cpp  resource_manager_napi_context.cpp  resource_manager_napi_sync_impl.cpp  resource_manager_napi_utils.cpp  resource_table_loader.cpp
interfaces/js/kits/: BUILD.gn
interfaces/js/kits/include/: resource_manager_addon.h
interfaces/js/kits/src/: resource_manager_addon.cpp  resource_manager_napi.cpp  sendable_resource_manager_napi.cpp  sendable_resource_napi.cpp
interfaces/native/resource/: BUILD.gn  librawfile.ndk.json
interfaces/native/resource/include/: ohresmgr.h  raw_dir.h  raw_file.h  raw_file_manager.h  resmgr_common.h
interfaces/native/resource/src/: raw_file_manager.cpp
test/fuzztest/resmgr_fuzzer/: BUILD.gn  resmgr_fuzzer.cpp
test/resource/: ohos_test.xml
test/resource/data/: all.hap  all_fa.hap  newModule.hap
test/resource/data/all/assets/entry/: resources.index  resourcesV2.index  resources_fa.index  resources_performance.index
test/resource/data/colormode/assets/entry/: resources.index
test/resource/data/mccmnc/assets/entry/: resources.index
test/resource/data/overlay/assets/entry/: resources.index  resourcesV2.index
test/resource/data/system/assets/entry/: resources.index
test/resource/data/theme/base/element/: pattern.json
test/resource/src/all/: config.json
test/resource/src/all/resources/base/element/: color.json  float.json  id_defined.json  pattern.json  plural.json  string.json  symbol.json  theme.json
test/resource/src/all/resources/dark/element/: color.json
test/resource/src/all/resources/en_US-phone-pointingdevice/element/: string.json
test/resource/src/all/resources/en_US-pointingdevice/element/: boolean.json  integer.json
test/resource/src/all/resources/en_US-xxldpi/element/: string.json
test/resource/src/all/resources/en_US/element/: boolean.json  integer.json  string.json
test/resource/src/overlay/: config.json
(+24 files in other folders)
