# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#     http://www.apache.org/licenses/LICENSE-2.0

# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("resmgr_config") {
  include_dirs = [
    "./include",
    "../dfx/hisysevent_adapter",
    "../interfaces/inner_api/include",
    "../interfaces/js/innerkits/core/include",
    "../frameworks/resmgr/include",
  ]
}

ohos_shared_library("resmgr") {
  public_configs = [ ":resmgr_config" ]
  include_dirs = [
    "./include",
    "../dfx/hisysevent_adapter",
    "../interfaces/inner_api/include",
    "../interfaces/js/innerkits/core/include",
    "../frameworks/resmgr/include",
  ]
  sources = [
    "../dfx/hisysevent_adapter/hisysevent_adapter.cpp",
    "../frameworks/resmgr/src/hap_manager.cpp",
    "../frameworks/resmgr/src/hap_resource.cpp",
    "../frameworks/resmgr/src/hap_resource_manager.cpp",
    "../frameworks/resmgr/src/locale_matcher.cpp",
    "../frameworks/resmgr/src/res_config_impl.cpp",
    "../frameworks/resmgr/src/res_desc.cpp",
    "../frameworks/resmgr/src/res_locale.cpp",
    "../frameworks/resmgr/src/resource_manager_impl.cpp",
    "../frameworks/resmgr/src/utils/hap_parser.cpp",
    "../frameworks/resmgr/src/utils/psue_manager.cpp",
    "../frameworks/resmgr/src/utils/utils.cpp",
    "../interfaces/js/innerkits/core/src/resource_manager_addon.cpp",
    "../interfaces/js/innerkits/core/src/resource_manager_napi_async_impl.cpp",
    "../interfaces/js/innerkits/core/src/resource_manager_napi_context.cpp",
    "../interfaces/js/innerkits/core/src/resource_manager_napi_sync_impl.cpp",
    "../interfaces/js/innerkits/core/src/resource_manager_napi_utils.cpp",
    "./native/resmgr_ani.cpp",
    "./native/resmgr_enum.cpp",
  ]

  sources += [
    "../frameworks/resmgr/src/resource_manager.cpp",
    "../frameworks/resmgr/src/resource_manager_ext_mgr.cpp",
    "../frameworks/resmgr/src/system_resource_manager.cpp",
    "../frameworks/resmgr/src/theme_pack_config.cpp",
    "../frameworks/resmgr/src/theme_pack_manager.cpp",
    "../frameworks/resmgr/src/theme_pack_resource.cpp",
    "../frameworks/resmgr/src/utils/string_utils.cpp",
  ]

  deps = []
  external_deps = [
    "ability_base:configuration",
    "ability_base:extractortool",
    "ace_engine:drawable_descriptor",
    "bundle_framework:appexecfwk_base",
    "cJSON:cjson",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "hitrace:hitrace_meter",
    "icu:shared_icui18n",
    "init:libbegetutil",
    "napi:ace_napi",
    "runtime_core:ani",
    "zlib:libz",
  ]
  subsystem_name = "global"
  part_name = "resource_management"
}
