# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../../resmgr.gni")

config("resourcemanager_preview_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "../../../frameworks/resmgr/include",
    "../../inner_api/include",
  ]
}

ohos_shared_library("resourcemanager") {
  include_dirs = [
    "../../../dfx/hisysevent_adapter",
    "../../../frameworks/resmgr/include",
    "../../inner_api/include",
  ]

  sources = [
    "../../../dfx/hisysevent_adapter/hisysevent_adapter.cpp",
    "src/resource_manager_napi.cpp",
  ]

  defines = [ "CONFIG_HILOG" ]

  deps = [ "../innerkits/core:resmgr_napi_core" ]

  external_deps = [
    "ability_runtime:abilitykit_native",
    "ability_runtime:extensionkit_native",
    "ability_runtime:runtime",
    "c_utils:utils",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "hitrace:hitrace_meter",
    "napi:ace_napi",
  ]

  stack_protector_ret = true
  sanitize = {
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
    integer_overflow = true
    ubsan = true
  }
  relative_install_dir = "module"
  subsystem_name = "global"
  part_name = "resource_management"
}

ohos_shared_library("resourcemanager_preview") {
  if (is_mingw || is_mac || is_linux) {
    output_name = "resourcemanager"
    defines = [
      "__IDE_PREVIEW__",
    ]

    if (is_mingw) {
      defines += [
        "__WINNT__",
        "__EXPORT_MGR__",
      ]
    } else if (is_linux) {
      defines += [ "__LINUX__" ]
    }

    public_configs = [ ":resourcemanager_preview_config" ]

    sources = [
      "src/resource_manager_napi.cpp",
    ]

    defines += [ "CONFIG_HILOG" ]

    deps = [ "../innerkits/core:resmgr_napi_core_preview" ]

    external_deps = [
      "hilog:libhilog",
      "napi:ace_napi",
    ]
  }
  subsystem_name = "global"
  part_name = "resource_management"
}

ohos_shared_library("sendableresourcemanager") {
  include_dirs = [
    "../../inner_api/include",
    "../../../frameworks/resmgr/include",
  ]

  sources = [ "src/sendable_resource_manager_napi.cpp" ]

  defines = [ "CONFIG_HILOG" ]

  external_deps = [
    "hilog:libhilog",
    "napi:ace_napi",
  ]

  stack_protector_ret = true
  sanitize = {
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
    integer_overflow = true
    ubsan = true
  }
  relative_install_dir = "module"
  subsystem_name = "global"
  part_name = "resource_management"
}

ohos_shared_library("sendableresourcemanager_preview") {
  if (is_mingw || is_mac || is_linux) {
    output_name = "sendableresourcemanager"
    include_dirs = [
      "../../inner_api/include",
      "../../../frameworks/resmgr/include",
    ]

    sources = [ "src/sendable_resource_manager_napi.cpp" ]

    defines = [ "CONFIG_HILOG" ]

    external_deps = [
      "hilog:libhilog",
      "napi:ace_napi",
    ]
  }
  subsystem_name = "global"
  part_name = "resource_management"
}