# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../../../resmgr.gni")

config("resmgr_napi_core_public_config") {
  include_dirs = [
    "include",
    "../../../../dfx/hisysevent_adapter",
    "../../../../frameworks/resmgr/include",
  ]
}

ohos_shared_library("resmgr_napi_core") {
  sources = [
    "../../../../dfx/hisysevent_adapter/hisysevent_adapter.cpp",
    "src/resource_manager_addon.cpp",
    "src/resource_manager_napi_async_impl.cpp",
    "src/resource_manager_napi_context.cpp",
    "src/resource_manager_napi_sync_impl.cpp",
    "src/resource_manager_napi_utils.cpp",
  ]

  version_script = "libresmgr_napi_core.versionscript"

  public_configs = [ ":resmgr_napi_core_public_config" ]

  deps = [ "../../../../frameworks/resmgr:global_resmgr" ]

  external_deps = [
    "ability_base:configuration",
    "ace_engine:drawable_descriptor",
    "bundle_framework:appexecfwk_base",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "hitrace:hitrace_meter",
    "napi:ace_napi",
  ]

  if (resource_management_support_icu) {
    defines = [ "SUPPORT_GRAPHICS" ]
  }

  subsystem_name = "global"
  innerapi_tags = [ "platformsdk" ]
  part_name = "resource_management"
}
